tests/error/auto_fail.gw
#! [contains] no match found for operator
int => auto ae @=> auto A;
